@@ -1,3 +1,8 @@
+2004-11-26  Theodore Kilgore <kilgota@auburn.edu>
+	* library.c: Fixed signedness errors
+	* iclick.c:   ditto
+	* iclick.h:   changed a return type from char* to int
+
 2004-11-29  Marcus Meissner  <marcus@jet.franken.de>
 
 	* .cvsignore: ignore stuff
